8 December 2009: Wouter
	- Fix for lookup of parent-child disagreement domains, where the
	  parent-side glue works but it does not provide proper NS, A or AAAA
	  for itself, fixing domains such as motorcaravanners.eu.

7 December 2009: Wouter
	- Bug#287: Fix segfault when unbound-control remove nonexistent local
	  data.  Added check to tests.

1 December 2009: Wouter
	- Fix crash with module-config "iterator".
	- Added unit test that has "iterator" module-config.

30 November 2009: Wouter
	- bug#284: fix parse of # without end-of-line at end-of-file.

26 November 2009: Wouter
	- updated ldns with release candidate for version 1.6.3.
	- tag for 1.4.0 release.
	- 1.4.1 version in trunk.
	- Fixup major libtool version to 2 because of why_bogus change.
	  It was 1:5:0 but should have been 2:0:0.

23 November 2009: Wouter
	- Patch from David Hubbard for libunbound manual page.
	- Fixup endless spinning in unbound-control stats reported by
	  Attila Nagy.  Probably caused by clock reversal.

20 November 2009: Wouter
	- contrib/split-itar.sh contributed by Tom Hendrikx.

19 November 2009: Wouter
	- better argument help for unbound-control.
	- iana portlist updated.

17 November 2009: Wouter
	- noted multiple entries for multiple domain names in example.conf.
	- iana portlist updated.

16 November 2009: Wouter
	- Fixed signer detection of CNAME responses without signatures.
	- Fix#282 libunbound memleak on error condition by Eric Sesterhenn.
	- Tests for CNAMEs to deeper trust anchors, secure and bogus.
	- svn tag 1.4.0rc1 made.

13 November 2009: Wouter
	- Fixed validation failure for CNAME to optout NSEC3 nodata answer.
	- unbound-host does not fail on type ANY.
	- Fixed wireparse failure to put RRSIGs together with data in some
	  long ANY mix cases, which fixes validation failures.

12 November 2009: Wouter
	- iana portlist updated.
	- fix manpage errors reported by debian lintian.
	- review comments.
	- fixup very long vallog2 level error strings.
	